hphp/hack/test/typecheck/typeconsts/interface_override_trait1.php.exp
File "interface_override_trait1.php", line 13, characters 7-7:
Constant T is defined concretely in multiple ancestors (Typing[4374])
  File "interface_override_trait1.php", line 10, characters 14-14:
  One conflicting definition is here
  File "interface_override_trait1.php", line 4, characters 14-14:
  Another conflicting definition is here, inherited through T1
